spectec/test/elab/neg/type-hole-outside-hint.spectec
;; A %-hole expression appears in regular expression position rather
;; than inside a hint expression.

dec $f : nat
def $f = %0
